Fixed wide join group dialog to become tall on mobile displays.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -2257,12 +2257,13 @@ room-members-sidebar-width = 200px
 room-join-left-side-width = 290px
 room-join-right-side-width = 290px
 room-join-center-margin = 20px
-room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+room-join-center-margin
+room-join-dialog-inner-width = room-join-left-side-width+room-join-right-side-width+room-join-center-margin
+room-join-dialog-width = room-join-dialog-inner-width + 2*30px
 
 .room-join-group-page-overlay
   // Make the background more visible than most overlays.
   background-color rgba(0,0,0, 0.1) // For browsers that don't support radial gradient.
-  background radial-gradient(rgba(0,0,0,0) room-join-dialog-width, rgba(0,0,0, 0.4))
+  background radial-gradient(rgba(0,0,0,0) 300px, rgba(0,0,0, 0.4))
 
   // Show over the room, but under the app mobile install banner.
   z-index 99
@@ -2286,6 +2287,7 @@ room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+ro
   margin 0
   z-index 100
 
+  box-sizing border-box
   width room-join-dialog-width
   border 1px solid rgba(0,0,0, .28)
   border-radius 6px
@@ -2296,7 +2298,7 @@ room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+ro
   color rgb(0,0,0)
   text-align center
 
-  .left-side-container
+  .left-side-container, .narrow-bottom-container
     float left
     box-sizing border-box
     width room-join-left-side-width
@@ -2314,6 +2316,9 @@ room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+ro
     .text
       font-size 12px
       line-height 1.2
+
+  .narrow-bottom-container
+    display none
 
   .right-side-container
     margin-left room-join-left-side-width + room-join-center-margin
@@ -2397,8 +2402,8 @@ room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+ro
         text-decoration underline
 
 
-// This is the width of iPhone 5 (4-inch display) rotated horizontally.
-@media (max-width: 568px)
+room-join-dialog-media-query = "(max-width: " + room-join-dialog-width + ")"
+@media room-join-dialog-media-query
   .room-join-group-signup-form-component
     max-width 99% // Make sure we don't overflow the width.
 
@@ -2411,6 +2416,20 @@ room-join-dialog-width = room-join-left-side-width+room-join-right-side-width+ro
 
     .or-divider
       margin 5px
+
+    .left-side-container, .right-side-container, .narrow-bottom-container
+      margin-left auto
+      margin-right auto
+
+    .left-side-container
+      display none
+
+    .narrow-bottom-container
+      display block
+      float none
+
+    .right-side-container
+      margin-bottom 20px
 
 .messages
   // Scrollable.
